WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291723
CustomElementRegistry.prototype.initialize doesn't work on a single element
https://bugs.webkit.org/show_bug.cgi?id=291723
Summary
CustomElementRegistry.prototype.initialize doesn't work on a single element
Ryosuke Niwa
Reported
2025-04-17 16:41:37 PDT
CustomElementRegistry.prototype.initialize doesn't work when it's called on a single disconnected element.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-04-17 16:49:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44237
EWS
Comment 2
2025-04-22 12:29:24 PDT
Committed
293968@main
(cbfaf8556c9e): <
https://commits.webkit.org/293968@main
> Reviewed commits have been landed. Closing PR #44237 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-04-22 12:30:14 PDT
<
rdar://problem/149790431
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug