CustomElementRegistry.prototype.initialize doesn't work on a single element https://bugs.webkit.org/show_bug.cgi?id=291723

Reviewed by Anne van Kesteren.

Fix the bug in CustomElementRegistry::initialize which wasn't updating the registry of the root when it's not a shadow root.

This PR also changes so that Document now sets setUsesNullCustomElementRegistry() when it does not have a browsing context,
and fixes Document::createElement and friends to propagate the null registry status from Document to a newly created element.

Finally, this PR makes Document::customElementRegistryForBindings fallback to TreeScope::customElementRegistry() when no
LocalDOMWindow is associated with the document (i.e. registry is manually set by CustomElementRegistry::initialize).

This PR imports a WPT added in https://github.com/web-platform-tests/wpt/pull/52045 and updated in
https://github.com/web-platform-tests/wpt/pull/51976 and adds another WPT for more comprehensive testing of
CustomElementRegistry.prototype.initialize and customElementRegistry getter on Document and Element.

* LayoutTests/imported/w3c/web-platform-tests/custom-elements/registries/pseudo-class-defined.window-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/custom-elements/registries/pseudo-class-defined.window.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/custom-elements/registries/pseudo-class-defined.window.js: Added.
* LayoutTests/imported/w3c/web-platform-tests/custom-elements/registries/scoped-registry-initialize-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/custom-elements/registries/scoped-registry-initialize.html: Added.
* Source/WebCore/dom/CustomElementRegistry.cpp:
(WebCore::CustomElementRegistry::initialize):
* Source/WebCore/dom/CustomElementRegistry.h:
(WebCore::CustomElementRegistry::registryForNodeOrTreeScope):
* Source/WebCore/dom/Document.cpp:
(WebCore::m_syncData):
(WebCore::createUpgradeCandidateElement):
(WebCore::Document::createElementForBindings):
(WebCore::Document::createElement):
(WebCore::Document::customElementRegistryForBindings):
(WebCore::Document::createElementNS):
* Source/WebCore/dom/DocumentFragment.cpp:
(WebCore::DocumentFragment::DocumentFragment):

Canonical link: https://commits.webkit.org/293968@main